--- a/game.html
+++ b/game.html
@@ -73,9 +73,9 @@
     var buildUrl = "Build";
     var loaderUrl = buildUrl + "/20006_br.loader.js";
     var config = {
-        dataUrl: buildUrl + "/aa97e535d7381b3aa8c62af8ec8da76e.data.unityweb?v=20260128145431",
-        frameworkUrl: buildUrl + "/f1ed6b0349156336557d3f753824641a.js.unityweb",
-        codeUrl: buildUrl + "/bab7cf4dc9dd34468b9bdadf89e6aa13.wasm.unityweb",
+        dataUrl: buildUrl + "/602bfe8f12bd2e8683a680ad5f75cdc0.data.unityweb?v=20260128165432?v=20260128164131",
+        frameworkUrl: buildUrl + "/373a1be3eb5eae35b29f919b30e22a4b.js.unityweb",
+        codeUrl: buildUrl + "/cb416a57be64d0c7b8aa9c32162485cc.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "whack-a-mole",
     productName: "whack-a-mole",
