--- a/game.html
+++ b/game.html
@@ -12,10 +12,10 @@
     <div class="progress-bar-bg">
         <div id="progress-bar-content"></div>
     </div>
-    <img id="animatedGif" class="progress-bar-image" src="./TemplateData/入場.webp" alt="" srcset="" />
+    <img id="animatedGif" class="progress-bar-image" src="" alt="" srcset="" />
 </div>
 <div id="initial-loader-1">
-    <img id="animatedGifCycle" class="initial-loader-img" src="./TemplateData/循環.webp" alt="" srcset="" />
+    <img id="animatedGifCycle" class="initial-loader-img" src="" alt="" srcset="" />
 </div>
 <div id="unity-container" class="unity-desktop">
     <canvas id="unity-canvas" width=960 height=600></canvas>
@@ -73,9 +73,9 @@
     var buildUrl = "Build";
     var loaderUrl = buildUrl + "/20006_br.loader.js";
     var config = {
-        dataUrl: buildUrl + "/602bfe8f12bd2e8683a680ad5f75cdc0.data.unityweb?v=20260128165432?v=20260128164131",
-        frameworkUrl: buildUrl + "/373a1be3eb5eae35b29f919b30e22a4b.js.unityweb",
-        codeUrl: buildUrl + "/cb416a57be64d0c7b8aa9c32162485cc.wasm.unityweb",
+        dataUrl: buildUrl + "/7e518fd70daf3b4de9cd5c32e6fabccd.data.unityweb?v=20260204152712?v=20260204151454",
+        frameworkUrl: buildUrl + "/f1ed6b0349156336557d3f753824641a.js.unityweb",
+        codeUrl: buildUrl + "/bab7cf4dc9dd34468b9bdadf89e6aa13.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "whack-a-mole",
     productName: "whack-a-mole",
